@@ -1,3 +1,12 @@
+2012-01-05  Alpha Lam  <hclam@chromium.org>
+
+        Unreviewed. Build fix.
+
+        Adding missing const_cast<> to fix compilation failures due to r104143.
+
+        * platform/audio/VectorMath.cpp:
+        (WebCore::VectorMath::zvmul):
+
 2012-01-05  Adam Barth  <abarth@webkit.org>
 
         Move Gamepad declarations from Navigator.idl into Modules/gamepad
